--- a/formation-model/pom.xml
+++ b/formation-model/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>sopra.promo404</groupId>
-	<artifactId>formation-model</artifactId>
+	<artifactId>formation-model-ref</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>formation-model</name>
 	<url>http://maven.apache.org</url>
 
